Add Dog project

--- a/index.html
+++ b/index.html
@@ -83,6 +83,25 @@
                         Live Demo
                     </a>
                 </div>
+                <div class="container">
+                    <h3>Find Your Favorite Dog</h3>
+                    <div class="portfolio-image">
+                        <img class="image-port" src="./images/FavDogBreed.PNG">
+                    </div>
+                    <div class="portfolio-text">
+                        <p>A single page app I built that connects to an API and allows the user to see pictures of
+                            different dog breeds.</p>
+                        <p><strong>Technology: </strong>HTML, CSS, Javscript, jQuery, AJAX</p>
+
+                        <a href="https://github.com/MatthewEubanks/Thinkful-Capstone1">
+                            Repo
+                        </a>
+                        |
+                        <a href="https://FindYourFavoriteDog--matteubanks.repl.co">
+                            Live Demo
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="contact">
