add backgroung and styling

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             <h2><a name="about">About Me</a></h2>
             <div class="container">
                 <div class="about-me">
-                    <p><strong>I love good RPG video games,</strong></p>
+                    <p><strong>I love good RPG video games, Witcher 3, Batman: Arkham Knight,</strong></p>
                     <p><strong>I need coffee to function,</strong></p>
-                    <p><strong>Fairy Tail fan,</strong></p>
+                    <p><strong>Fairy Tail fan, Natsu is my favorite characther,</strong></p>
                     <p><strong>and I’m a Full Stack Web Developer.</strong></p>
                     <p><strong>
                             I enjoy building API’s and React pages to interact with them.
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div class="portfolio">
-            <h2><a name="portfolio">PORTFOLIO</a></h2>
+            <h2><a name="portfolio">Portfolio</a></h2>
             <div class="container">
                 <h3>The Book Shelf</h3>
                 <div class="portfolio-image">
