changed one pic

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         </div>
 
         <div class="about" id="about">
+          <h2><a name="about">About Me</a></h2>
           <div class="container">
             <div class="about-me">
-              <h2><a name="about">About Me</a></h2>
               <p><strong>I love good RPG video games, Witcher 3, Batman: Arkham Knight,</strong></p>
               <p><strong>I need coffee to function,</strong></p>
               <p><strong>Fairy Tail fan, Natsu is my favorite characther,</strong></p>
@@ -81,7 +81,7 @@
           <div class="container">
             <h3>Find Your Favorite Dog</h3>
             <div class="projects-image">
-              <img class="image-port" src="./images/FavDogBreed.PNG" />
+              <img class="image-port" src="./images/projects/Dog-API.PNG" />
             </div>
             <div class="projects-text">
               <p>
