change font size in about

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet" />
     <link rel="icon" type="image/png" href="./favicon.ico" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
 
   <body>
@@ -35,11 +39,16 @@
           <h2><a name="about">About Me</a></h2>
           <div class="container">
             <div class="about-me">
-              <p><strong>I love good RPG video games, Witcher 3, Batman: Arkham Knight,</strong></p>
-              <p><strong>I need coffee to function,</strong></p>
-              <p><strong>Fairy Tail fan, Natsu is my favorite characther,</strong></p>
-              <p><strong>and I’m a Full Stack Web Developer.</strong></p>
-              <p><strong> I enjoy building API’s using Node.js and REACT applications. </strong></p>
+              <p><strong>Hi! My name is Matt, and I'm a Full Stack Web Developer.</strong></p>
+              <p>I am an avid coffee drinker. The stronger the better!</p>
+              <p>
+                I enjoy good RPG games that have a good story and plot behind the awesome gameplay.
+                Such as, The Withcher 3, and Batman: Arkham Knight!
+              </p>
+              <p>
+                I love good books. My favorite book is "The Way of Men" by: Jack Donovan. I enjoy
+                adventure books as well such as The Three Musketeers, and The Count of Monte Cristo.
+              </p>
             </div>
           </div>
         </div>
