updated github account name

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               </p>
               <p><strong>Technology: </strong>Mongoose, Express, React, Node.js</p>
 
-              <a href="https://github.com/matteprg/react-book-shelf"> Repo </a> |
+              <a href="https://github.com/MatthewEubanks/react-book-shelf"> Repo </a> |
               <a href="https://matts-book-shelf.herokuapp.com/"> Live Demo </a>
             </div>
           </div>
@@ -83,7 +83,7 @@
               </p>
               <p><strong>Technology: </strong>Mongoose, Express, Javscript, jQuery, Node.js</p>
 
-              <a href="https://github.com/matteprg/Mobile-Detailing-Blog"> Repo </a> |
+              <a href="https://github.com/MatthewEubanks/Mobile-Detailing-Blog"> Repo </a> |
               <a href="https://mobile-detailer-props-blog.herokuapp.com/"> Live Demo </a>
             </div>
           </div>
@@ -123,7 +123,7 @@
               </p>
               <p>
                 <strong>Github: </strong>
-                <a href="https://github.com/matteprg">https://github.com/matteprg</a>
+                <a href="https://github.com/MatthewEubanks">https://github.com/MatthewEubanks</a>
               </p>
               <p>
                 <strong>LinkedIn: </strong>
