--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="avatar-image">
           <img class="avatar" src="./images/betterProfile.jpg" alt="Avatar" />
           <h1>Matthew Eubanks</h1>
-          <h3>Front End Developer | Back End Developer</h3>
+          <h3>Full Stack Web Developer</h3>
         </div>
 
         <div class="about" id="about">
