--- a/index.html
+++ b/index.html
@@ -116,21 +116,36 @@
         <div class="contact" id="skills">
           <h2><a name="contact">Contact Me</a></h2>
           <div class="container">
-            <div class="projects-text">
-              <p>
-                <strong>Email: </strong>
-                <a href="spc.eubanks.matthew@gmail.com">spc.eubanks.matthew@gmail.com</a>
-              </p>
-              <p>
-                <strong>Github: </strong>
-                <a href="https://github.com/MatthewEubanks">https://github.com/MatthewEubanks</a>
-              </p>
-              <p>
-                <strong>LinkedIn: </strong>
-                <a href="https://www.linkedin.com/in/matthew-eubanks-5791472b/"
-                  >https://www.linkedin.com/in/matthew-eubanks-5791472b/</a
-                >
-              </p>
+            <div class="icons-contactme">
+              <a href="mailto:spc.eubanks.matthew@gmail.com">
+                <img
+                  class="icons-email"
+                  src="./images/icons/iconfinder_39_Email_Marketing_1688837.png"
+                />
+              </a>
+              <a href="https://github.com/MatthewEubanks">
+                <img class="icons-github" src="./images/icons/iconfinder_github_394189.png" />
+              </a>
+              <a href="https://www.linkedin.com/in/matthew-eubanks-5791472b/">
+                <img class="icons-linkedin" src="./images/icons/iconfinder_linkedin_986950.png" />
+              </a>
+
+              <!--
+                <p>
+                  <strong>Email: </strong>
+                  <a href="spc.eubanks.matthew@gmail.com">spc.eubanks.matthew@gmail.com</a>
+                </p>
+                <p>
+                  <strong>Github: </strong>
+                  <a href="https://github.com/MatthewEubanks">https://github.com/MatthewEubanks</a>
+                </p>
+                <p>
+                  <strong>LinkedIn: </strong>
+                  <a href="https://www.linkedin.com/in/matthew-eubanks-5791472b/"
+                    >https://www.linkedin.com/in/matthew-eubanks-5791472b/</a
+                  >
+                </p>
+              -->
             </div>
           </div>
         </div>
