add alt to contact buttons

--- a/index.html
+++ b/index.html
@@ -121,13 +121,22 @@
                 <img
                   class="icons-email"
                   src="./images/icons/iconfinder_39_Email_Marketing_1688837.png"
+                  alt="mailto:spc.eubanks.matthew@gmail.com"
                 />
               </a>
               <a href="https://github.com/MatthewEubanks">
-                <img class="icons-github" src="./images/icons/iconfinder_github_394189.png" />
+                <img
+                  class="icons-github"
+                  src="./images/icons/iconfinder_github_394189.png"
+                  alt="https://github.com/MatthewEubanks"
+                />
               </a>
               <a href="https://www.linkedin.com/in/matthew-eubanks-5791472b/">
-                <img class="icons-linkedin" src="./images/icons/iconfinder_linkedin_986950.png" />
+                <img
+                  class="icons-linkedin"
+                  src="./images/icons/iconfinder_linkedin_986950.png"
+                  alt="https://www.linkedin.com/in/matthew-eubanks-5791472b/"
+                />
               </a>
 
               <!--
