--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
           <h2><a name="about">About Me</a></h2>
           <div class="container">
             <div class="about-me">
-              <p><strong>Hi! My name is Matt, and I'm a Full Stack Web Developer.</strong></p>
-              <p>I am an avid coffee drinker. The stronger the better!</p>
+              <p><strong>Hi! My name is Matt, and I'm a Senior Full Stack Web Developer/DevOps Engineer.</strong></p>
+              <p>I enjoy woking on complex problems and finding unique solutions to resolve them.</p>
               <p>
                 I enjoy good RPG games that have a good story and plot behind the awesome gameplay.
                 Such as, The Withcher 3, and Batman: Arkham Knight!
